# rust-playground

./: .gitignore  README.md  average.rs  averages  pp-swap  projects.txt  swap.rs
arrays/: Cargo.toml
arrays/src/: main.rs
binaries/: swap  temperature
control_flow/: Cargo.toml
control_flow/src/: main.rs
enumps/: Cargo.toml
enumps/src/: main.rs
factorial/: Cargo.toml
factorial/src/: main.rs
fizzbuzz/src/: main.rs
generics/genlib/: Cargo.toml
generics/genlib/src/: lib.rs  pair.rs  point.rs  shapes.rs
generics/src/: main.rs
is_even/: Cargo.toml
is_even/src/: main.rs
is_prime/: Cargo.toml
is_prime/src/: main.rs
strings/src/: main.rs
structs/src/: main.rs
swap/: Cargo.toml
swap/src/: main.rs
temperature/src/: main.rs
texios/: .gitignore  README.md
texios/analyser/: Cargo.toml
texios/analyser/src/: lib.rs
texios/client/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
texios/client/src/: App.tsx  main.tsx
texios/client/src/components/: FileSelect.tsx  WordFrequencyPlot.tsx
texios/client/src/hooks/: UseFileAnalysis.tsx
texios/client/src/pkg/: package.json  text_analyser.d.ts  text_analyser_bg.js
texios/tx_client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
texios/tx_client/src/: App.tsx  index.css
texios/tx_client/src/components/: FileSelect.tsx  WordFrequencyPlot.tsx
texios/tx_client/src/hooks/: UseFileAnalysis.tsx
texios/tx_client/src/pkg/: text_analyser.js  (+2 more)
trials/: Cargo.toml
trials/src/: main.rs
(+2 files in other folders)
