[package]
name = "text_analyser"
authors = ["William Inyam <sw.inyam@outlook.com>"]
description = "A simple text analyser"
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.11.3"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.104"

